# Dicom-Viewer

./: DicomViewer.sln
DicomViewer/: DB.txt  DataBase.db  DataBaseTags.db  DicomFile.cpp  DicomFile.h  DicomViewer.vcxproj  DicomViewer.vcxproj.filters  MyForm.cpp  MyForm.h  MyForm.resx  database.cpp  database.h  main.cpp
get_dicom_parametrs/: Tags.txt
get_dicom_parametrs/src/: CMakeLists.txt  get_dicom_parametrs.cxx  get_dicom_parametrs.h
